--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,76 +6,75 @@
      "presentation": { 
          "reveal": "always" 
     }, 
-    "tasks": [ 
-        //C++ 컴파일 
-        { 
+    "tasks": [
+        {
             "label": "save and compile for C++",
-             "command": "g++", 
-             "args": [ 
-                 "${file}", 
-                 "-o", 
-                 "${fileDirname}/${fileBasenameNoExtension}" 
-            ], 
-            "group": "build", 
-            //컴파일시 에러를 편집기에 반영 
-            //참고: https://code.visualstudio.com/docs/editor/tasks#_defining-a-problem-matcher 
-            "problemMatcher": { 
-                "fileLocation": [ 
-                    "relative", 
-                    "${workspaceRoot}" 
-                ], 
-                "pattern": {
-                     // The regular expression.
-                     //Example to match: helloWorld.c:5:3: warning: implicit declaration of function 'prinft'
-                     "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning error):\\s+(.*)$",
-                      "file": 1, 
-                      "line": 2, 
-                      "column": 3, 
-                      "severity": 4, 
-                      "message": 5
-                 } 
-            }
-        }, 
-        //C 컴파일 
-        { 
-            "label": "save and compile for C", 
-            "command": "gcc", 
-            "args": [ 
-                "${file}", 
+            "command": "g++",
+            "args": [
+                "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
-             ], 
-             "group": "build",
-              //컴파일시 에러를 편집기에 반영 
-              //참고: https://code.visualstudio.com/docs/editor/tasks#_defining-a-problem-matcher 
-              "problemMatcher": { 
-                  "fileLocation": 
-                  [ 
-                      "relative", 
-                      "${workspaceRoot}" 
-                  ], 
-                  "pattern": { 
-                      // The regular expression. 
-                      //Example to match: helloWorld.c:5:3: warning: implicit declaration of function 'prinft' 
-                      "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning error):\\s+(.*)$", 
-                      "file": 1, 
-                      "line": 2, 
-                      "column": 3, 
-                      "severity": 4, 
-                      "message": 5 
-                    } 
-                } 
-        }, 
-        // // 바이너리 실행(Windows) 
-        { 
-            "label": "execute", 
-            "command": "cmd", "group": 
-            "test", 
+            ],
+            "group": "build",
+            "problemMatcher": {
+                "fileLocation": [
+                    "relative",
+                    "${workspaceRoot}"
+                ],
+                "pattern": {
+                    "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning error):\\s+(.*)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "severity": 4,
+                    "message": 5
+                }
+            }
+        },
+        {
+            "label": "save and compile for C",
+            "command": "gcc",
             "args": [
-                 "/C", 
-                 "${fileDirname}\\${fileBasenameNoExtension}" 
-            ] 
-        } 
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "group": "build",
+            "problemMatcher": {
+                "fileLocation": [
+                    "relative",
+                    "${workspaceRoot}"
+                ],
+                "pattern": {
+                    "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning error):\\s+(.*)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "severity": 4,
+                    "message": 5
+                }
+            }
+        },
+        {
+            "label": "execute",
+            "command": "cmd",
+            "group": "test",
+            "args": [
+                "/C",
+                "${fileDirname}\\${fileBasenameNoExtension}"
+            ]
+        },
+        {
+            "type": "java",
+            "mainClass": "JAVA.java0323",
+            "targetPath": "${workspaceFolder}/${workspaceFolderBasename}.jar",
+            "elements": [
+                "${compileOutput}",
+                "${dependencies}"
+            ],
+            "problemMatcher": [],
+            "label": "java: exportjar:Git"
+        }
     ] 
 }
 
