--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
+        "git_hj/.vscode/JAVA",
         ".vscode/JAVA",
         ".vscode/Git",
-        "git_hj/.vscode/JAVA"
+        "src"
     ]
 }
